--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>spark-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 
 
